# rag_07

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  FUNCTION_CALLING_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  WEB_IMPLEMENTATION_SUMMARY.md  conftest.py  coverage.xml  docker-compose.yml  docker_start.sh  docs_generate.sh  docs_index.html  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  run_web_system.sh  setup.sh  test_web_system.sh  tsconfig.json  tsdoc.json  typedoc.json
.github/instructions/: config.instructions.md
cache/models/: anthropic_models.json  ollama_models.json  openai_models.json  openrouter_models.json
config/: app_config.json
docker/: Dockerfile.api  Dockerfile.streamlit  nginx.conf
docker/streamlit_config/: config.toml
docs/: collections_management.md  database_management.md  logging_system.md  model_management.md  quick_start_collections.md  web_interface.md
docs/python/: conf.py  index.rst
docs/python/_build/html/: .buildinfo  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/python/_build/html/.doctrees/: environment.pickle  index.doctree
docs/python/_build/html/.doctrees/modules/: cli.doctree  exceptions.doctree  index.doctree  main.doctree
docs/python/_build/html/_modules/: index.html
docs/python/_build/html/_sources/modules/: cli.rst.txt  exceptions.rst.txt
docs/python/_build/html/modules/: cli.html  index.html  main.html
docs/python/public/docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/python/public/docs/_modules/: exceptions.html
docs/python/public/docs/_sources/modules/: index.rst.txt  main.rst.txt
docs/python/public/docs/modules/: cli.html  exceptions.html  main.html
scripts/: README.md  cleanup_databases.sh  collections_demo.sh  database_management.sh  index_documentation.py  index_documentation.sh  pre_commit_tests.sh  quick_demo.sh  test_all.sh  test_api_connectivity.sh  test_providers.sh
src/: cli.py  exceptions.py  main.py
src/config/: config_manager.py
src/models/: model_info.py
src/providers/: base.py
src/providers/llm/: __init__.py  anthropic_provider.py  google_provider.py  lmstudio_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
src/providers/text/: __init__.py  basic_processor.py
src/providers/vector/: __init__.py  chroma_provider.py  faiss_provider.py
src/services/: application_service.py  function_calling_service.py
src/tools/: __init__.py  function_executor.py  vector_search_tools.py
src/utils/: logger.py  model_cache.py
src/web/: __init__.py  api_server.py  models.py  streamlit_app.py
tests/: test_anthropic_provider.py  test_api_connections.py  test_chroma_provider.py  test_config_manager.py  test_database_initialization.py  test_faiss_provider.py  test_google_provider.py  test_text_processor.py  test_web_api.py  test_web_streamlit.py
